--- a/3-movies_app/movies/templates/movies/about.html
+++ b/3-movies_app/movies/templates/movies/about.html
@@ -1,4 +1,6 @@
 {% extends "movies/_nav.html" %} {% block content %}
 
 <p>always remember ali is great!!</p>
+    {% load  static %}
+    <img    src="{% static 'movies/images.png' %}" alt="aboutme" style="width: 122px; height: 122px"/>
 {% endblock content %}
