--- a/1/movies/templates/movies/about.html
+++ b/1/movies/templates/movies/about.html
@@ -1,6 +1,8 @@
 {% extends "movies/_nav.html" %} {% block content %}
 
 <p>always remember ali is great!!</p>
-    {% load  static %}
-    <img    src="{% static 'movies/images.png' %}" alt="aboutme" style="width: 122px; height: 122px"/>
+{% load static %}
+<img
+  src="{% static 'movies/download.png' %}"
+
 {% endblock content %}
